# bullbeararena

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  run.py  setup.py
backend/app/: __init__.py  cli.py  config.py
backend/app/agents/: base.py  orchestrator.py  prompts.py
backend/app/api/: app.py  routes.py
backend/app/report/: formatter.py  generator.py
backend/bullbeararena/: __init__.py  cli.py  config.py
backend/bullbeararena/agents/: base.py  debate.py  orchestrator.py  prompts.py
backend/bullbeararena/api/: app.py  routes.py  stream.py
backend/bullbeararena/data/: metrics.py  sec_client.py
backend/bullbeararena/report/: formatter.py  generator.py
frontend/: Dockerfile  next.config.ts  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: AgentCards.tsx  ArenaAnalysis.tsx  HeroSearch.tsx
