[project]
name = "bullbeararena"
version = "0.1.0"
description = "BullBearArena — AI-powered stock analysis through legendary investor perspectives"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "litellm>=1.60.0",
    "pydantic>=2.10.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "yfinance>=0.2.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[project.scripts]
bullbeararena = "bullbeararena.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bullbeararena*"]
